# challenges

./: .gitignore  Cargo.toml  flake.nix
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-5-link
aoc/: Cargo.toml
aoc-helpers/: Cargo.toml
aoc-helpers/src/: lib.rs
aoc/problems/2025/: day08.txt
aoc/src/: lib.rs
aoc/src/aoc_2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  mod.rs
aoc/src/aoc_2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  mod.rs
aoc/src/aoc_2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
aoc2024/: Cargo.toml
challenges-input/: Cargo.toml
challenges-input/src/: lib.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
rowan2025/: Cargo.toml  sample1.txt
rowan2025/src/: lib.rs
src/: main.rs
