[workspace]
resolver = "2"
members = [ "aoc-helpers", "aoc2024", "challenges-input",
    "rowan2025",
]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
challenges-input = { path = "./challenges-input" }

[package]
name = "challenges"
version = "0.1.0"
edition = "2021"

[dependencies]
rowan2025 = { path = "rowan2025" }
aoc2024 = { path = "aoc2024" }
clap.workspace = true
challenges-input.workspace = true
arboard = "3.5.0"
