[workspace]
resolver = "2"
members = [ "aoc-helpers", "aoc", "challenges-input", "proc-macros",
    "rowan2025",
]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
challenges-input.path = "./challenges-input"
proc-macros.path = "./proc-macros"
itertools = "0.14.0"

[package]
name = "challenges"
version = "0.1.0"
edition = "2024"

[dependencies]
rowan2025 = { path = "rowan2025" }
aoc = { path = "aoc" }
clap.workspace = true
challenges-input.workspace = true
arboard = "3.5.0"
