[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar-names = "allow"

[dependencies]
clap.workspace = true
aoc-helpers = { version = "0.1", path = "../aoc-helpers" }
challenges-input.workspace = true
proc-macros.workspace = true
itertools.workspace = true
float-ord = "0.3.2"
rayon = "1.11.0"
lru = "0.16.2"
z3 = "0.19.6"
